[package]
name = "openvpn-mfa"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
bindgen = "0.72.1"

[dependencies]
log = { version = "0.4.29", features = ["std"] }
base64 = "0.22.1"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread"] }
ldap3 = { version = "0.12.1" }
moka = { version = "0.12.15", features = ["sync"] }
rand = "0.10.1"
